@@ -77,50 +77,53 @@ JAVA_CLASSES = \
 
 TESTS_ENVIRONMENT = env TEST_CLASSES="$(JAVA_CLASSES)" `BOOTCLASSPATH="."; export BOOTCLASSPATH; . $(top_builddir)/BUILD_ENVIRONMENT; sed 's/.*export \(.*\)/echo \1=$$\1/' < $(top_builddir)/BUILD_ENVIRONMENT | sh`
 
+##CPATH = $(top_builddir)/libraries/javalib/rt.jar
+CPATH = .:$(top_builddir)/libraries/javalib/rt.jar
+
 ConstMethods.class: $(srcdir)/ConstMethods.java
-	$(JIKES) -g -classpath $(top_builddir)/libraries/javalib/rt.jar -d . $(srcdir)/ConstMethods.java
+	$(JIKES) -g -classpath $(CPATH) -d . $(srcdir)/ConstMethods.java
 
 ConstMathMethods.class: $(srcdir)/ConstMathMethods.java
-	$(JIKES) -g -classpath $(top_builddir)/libraries/javalib/rt.jar -d . $(srcdir)/ConstMathMethods.java
+	$(JIKES) -g -classpath $(CPATH) -d . $(srcdir)/ConstMathMethods.java
 
 ParameterizedMethods.class: $(srcdir)/ParameterizedMethods.java
-	$(JIKES) -g -classpath $(top_builddir)/libraries/javalib/rt.jar -d . $(srcdir)/ParameterizedMethods.java
+	$(JIKES) -g -classpath $(CPATH) -d . $(srcdir)/ParameterizedMethods.java
 
 ParameterizedMathMethods.class: $(srcdir)/ParameterizedMathMethods.java
-	$(JIKES) -g -classpath $(top_builddir)/libraries/javalib/rt.jar -d . $(srcdir)/ParameterizedMathMethods.java
+	$(JIKES) -g -classpath $(CPATH) -d . $(srcdir)/ParameterizedMathMethods.java
 
 ParameterizedLogicalMethods.class: $(srcdir)/ParameterizedLogicalMethods.java
-	$(JIKES) -g -classpath $(top_builddir)/libraries/javalib/rt.jar -d . $(srcdir)/ParameterizedLogicalMethods.java
+	$(JIKES) -g -classpath $(CPATH) -d . $(srcdir)/ParameterizedLogicalMethods.java
 
 ParameterizedBitwiseMethods.class: $(srcdir)/ParameterizedBitwiseMethods.java
-	$(JIKES) -g -classpath $(top_builddir)/libraries/javalib/rt.jar -d . $(srcdir)/ParameterizedBitwiseMethods.java
+	$(JIKES) -g -classpath $(CPATH) -d . $(srcdir)/ParameterizedBitwiseMethods.java
 
 ControlFlowMethods.class: $(srcdir)/ControlFlowMethods.java
-	$(JIKES) -g -classpath $(top_builddir)/libraries/javalib/rt.jar -d . $(srcdir)/ControlFlowMethods.java
+	$(JIKES) -g -classpath $(CPATH) -d . $(srcdir)/ControlFlowMethods.java
 
 StaticMethodCall.class: $(srcdir)/StaticMethodCall.java
-	$(JIKES) -g -classpath $(top_builddir)/libraries/javalib/rt.jar -d . $(srcdir)/StaticMethodCall.java
+	$(JIKES) -g -classpath $(CPATH) -d . $(srcdir)/StaticMethodCall.java
 
 TypeConversion.class: $(srcdir)/TypeConversion.java
-	$(JIKES) -g -classpath $(top_builddir)/libraries/javalib/rt.jar -d . $(srcdir)/TypeConversion.java
+	$(JIKES) -g -classpath $(CPATH) -d . $(srcdir)/TypeConversion.java
 
 StaticFields.class: $(srcdir)/StaticFields.java
-	$(JIKES) -g -classpath $(top_builddir)/libraries/javalib/rt.jar -d . $(srcdir)/StaticFields.java
+	$(JIKES) -g -classpath $(CPATH) -d . $(srcdir)/StaticFields.java
 
 PrimitiveArrays.class: $(srcdir)/PrimitiveArrays.java
-	$(JIKES) -g -classpath $(top_builddir)/libraries/javalib/rt.jar -d . $(srcdir)/PrimitiveArrays.java
+	$(JIKES) -g -classpath $(CPATH) -d . $(srcdir)/PrimitiveArrays.java
 
 ObjectFields.class: $(srcdir)/ObjectFields.java
-	$(JIKES) -g -classpath $(top_builddir)/libraries/javalib/rt.jar -d . $(srcdir)/ObjectFields.java
+	$(JIKES) -g -classpath $(CPATH) -d . $(srcdir)/ObjectFields.java
 
 MethodOptimizations.class: $(srcdir)/MethodOptimizations.java
-	$(JIKES) -g -classpath $(top_builddir)/libraries/javalib/rt.jar -d . $(srcdir)/MethodOptimizations.java
+	$(JIKES) -g -classpath $(CPATH) -d . $(srcdir)/MethodOptimizations.java
 
-NativeMethodCall.class java/lang/System.class: $(srcdir)/NativeMethodCall.java  $(srcdir)/System.java
-	$(JIKES) -g -classpath $(top_builddir)/libraries/javalib/rt.jar -d .  $(srcdir)/System.java $(srcdir)/NativeMethodCall.java
+NativeMethodCall.class java/lang/System.class: $(srcdir)/NativeMethodCall.java  $(srcdir)/java/lang/System.java
+	$(JIKES) -g -classpath $(CPATH) -d . $(srcdir)/java/lang/System.java $(srcdir)/NativeMethodCall.java
 
 Exceptions.class: $(srcdir)/Exceptions.java
-	$(JIKES) -g -classpath $(top_builddir)/libraries/javalib/rt.jar -d . $(srcdir)/Exceptions.java
+	$(JIKES) -g -classpath $(CPATH) -d . $(srcdir)/Exceptions.java
 
 jit_stub.o: java/lang/System.class $(JAVA_CLASSES)
 
